# remote_logger

./: Cargo.toml
remote_logger/: Cargo.toml
remote_logger/src/: lib.rs
remote_logger_protocol/: Cargo.toml
remote_logger_protocol/src/: lib.rs
remote_monitor/: Cargo.toml
remote_monitor/src/: lib.rs  main.rs
